--- a/radio.html
+++ b/radio.html
@@ -32,29 +32,30 @@
 <br>
 <br>
 <div style="text-align: left;">
-<p style="font-family:courier;color:red;font-size:90%;">A selection of radio works<br>
+<p style="font-family:courier;color:red;font-size:90%;">Radio as a medium, a selection of works<br>
 </p>
 <br>
 <br>
 <br>
 <br>
-<small>2025_<b>Open Air Radio</b>_for the Topographies Sonore festival in Albi France, we installed an interactive sound installation in the Saint-Salvy cloister garden using an interconnected network of FM transmitters and transistor radios. The sonically charged space reacted to gusts of wind, pigeon flight, and the sound of visitors moving around the space in subtle feedback and noise, creating a multi-layered sounding environment. In collaboration with Jacob Eckhardt, we explored the potential of a live soundscape radio project where through open mics, visitors could playback sounds from their phones into the spatial installation. The interactive space was recorded for playback on Radio Albige, a local grassroots radio project. </small><br>
+<small>2025_<b>Open Air Radio</b>_for the Topographies Sonore festival in Albi, France an interactive sound installation was set up in the Saint-Salvy cloister garden using an interconnected network of FM transmitters and transistor radios. The sonically charged space reacted to gusts of wind, pigeon flight, and the sound of visitors moving around the space in subtle feedback and noise, creating a multi-layered sounding environment. With this installation, we explored the potential of a live soundscape radio project where through open mics, visitors could playback sounds from their phones into the spatial installation. The interactive space was recorded for playback on <a href="https://www.radioalbiges.com/">Radio Albiges</a> , a local grassroots radio project.  </small><br>
+<br>
+<small>a collaboration with Jacob Eckhardt</small><br>
+<small>supported by GMEA Albi and tekhnē</small><br>
 <br>
 <figure>
-  <audio controls src="280125_03_cloitre_perf-2.mp3">
-    <a href="280125_03_cloitre_perf-2.mp3"></a>
+  <audio controls src="cloister radio excerpt.mp3">
+    <a href="cloister radio excerpt.mp3"></a>
   </audio>
 </figure>
-<small>_<i>installation excerpt, recording by Benjamin Maumus</i></small> 
+<small><i>installation excerpt</i></small> 
 <br>
 <br>
 <img src="OpenAirRadio_GmeaAlbi.png" alt="scene of cloister garden with people standing around and Topographies Sonore festival banner"style="width:450px;height:280px;"><br>
-<small>_<i>28.01.2025 @Saint-Salvy Cloister</i></small> 
+<small><i>28.01.2025 @Saint-Salvy Cloister</i></small> 
 <br>
 <br>
-<a href="https://www.radioalbiges.com/">
-    <img src="RadioAlbiges.png" alt="clickable radio Albiges banner"style="width:200px;height:200px;">
-</a>
+    <img src="GMEA_albi_logo.png" alt="GMEA Albi logo"style="width:200px;height:200px;">
 <br>
 <br>
 <br>
@@ -68,13 +69,13 @@
     <a href="excerpt The Backyard.mp3"></a>
   </audio>
 </figure>
-<small>_<i>installation excerpt</i></small> 
+<small><i>installation excerpt</i></small> 
 <br>
 <br>
 <img src="SonicActs-2024-16by9-1920x1080px.jpeg" alt="SonicActs2024banner"style="width:450px;height:253px;"><br>
 <br>
 <img src="SonicActsworking.jpg" alt="A laptop, two radio and electronic parts scattered on a table facing into a glass house"style="width:450px;height:253px;"><br>
-<small>_<i>28.02.2024 @Zone2Source</i></small> 
+<small><i>28.02.2024 @Zone2Source</i></small> 
 <br>
 <br>
 <br>
@@ -82,14 +83,14 @@
 <br>
 <br>
 <img src="Voronoi diagram 2.png" alt="Voronoi diagram"style="width:180px;height:180px;"><br>
-<small>_<i>voronoi diagram</i></small> 
+<small><i>voronoi diagram</i></small> 
 <br>
 <br>
 <br>
 <small>2023_<b>Corpus ii</b>_was a live performance of Corpus i through a 4-channel speaker configuration and three receiver radios; spatialized according to the voronoi principle. Here the performer's movements in space interacts with the FM transmission and electromagnetic waves, adding dynamics to the live sound performance. </small> 
 <br>
 <br>
-<small>_ii.10.9.2023_another Landhaus</small> 
+<small>ii.10.9.2023_another Landhaus</small> 
 <br>
  <figure>
   <audio controls src="Corpus_ii.mp3">
