--- a/parent.html
+++ b/parent.html
@@ -16,9 +16,6 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
 <div style="text-align: center;">
 <img src="parent_still_scenes.png" alt="still frames parent performance at TAM veliko tarnavo"style="width:250px;height:270px;">
 <style>
@@ -28,12 +25,19 @@
 </style>
 <p class="text-block"><small>_<i>parent performance</i></small> </p>
 <br>
+<figure>
+  <audio controls src="parent_echo_scene2_TAM.mp3">
+    <a href="parent_echo_scene2_TAM.mp3"></a>
+  </audio>
+</figure>
+<small>performance excerpt</small> 
+<br>
 <br>
 <br>
 <br>
 <br>
 <div style="text-align: left;">
-<p style="font-family:courier;color:red;font-size:90%;">Experimental new opera, collaborative project with Viktoria Nikolova<br>
+<p style="font-family:courier;color:red;font-size:90%;">Experimental opera with Viktoria Nikolova<br>
 </p>
 <br>
 <br>
