--- a/radio.html
+++ b/radio.html
@@ -49,7 +49,7 @@
     <a href="cloister radio excerpt.mp3"></a>
   </audio>
 </figure>
-<small><i>installation excerpt</i></small> 
+<small>installation excerpt</small> 
 <br>
 <br>
 <img src="OpenAirRadio_GmeaAlbi.png" alt="scene of cloister garden with people standing around and Topographies Sonore festival banner"style="width:450px;height:280px;"><br>
@@ -70,7 +70,7 @@
     <a href="excerpt The Backyard.mp3"></a>
   </audio>
 </figure>
-<small><i>installation excerpt</i></small> 
+<small>installation excerpt</small> 
 <br>
 <br>
 <img src="SonicActs-2024-16by9-1920x1080px.jpeg" alt="SonicActs2024banner"style="width:450px;height:253px;"><br>
@@ -91,7 +91,7 @@
 <small>2023_<b>Corpus ii</b>_was a live performance of Corpus i through a 4-channel speaker configuration and three receiver radios; spatialized according to the voronoi principle. Here the performer's movements in space interacts with the FM transmission and electromagnetic waves, adding dynamics to the live sound performance. </small> 
 <br>
 <br>
-<small>ii.10.9.2023_another Landhaus</small> 
+<small><i>10.9.2023 @Landhaus</i></small> 
 <br>
  <figure>
   <audio controls src="Corpus_ii.mp3">
