--- a/parent.html
+++ b/parent.html
@@ -16,21 +16,24 @@
 <br>
 <br>
 <br>
+<br>
+<br>
 <div style="text-align: center;">
-<img src="parent_still_scenes.png" alt="still frames parent performance at TAM veliko tarnavo"style="width:250px;height:270px;">
+<img src="parent_still_scenes.png" alt="still frames parent performance at TAM veliko tarnavo"style="width:300px;height:320px;">
+<br>
+    <figure>
+  <audio controls src="parent_echo_scene2_TAM.mp3">
+    <a href="parent_echo_scene2_TAM.mp3"></a>
+  </audio>
+</figure>
+<small>_<i>performance excerpt</i></small> 
 <style>
   .text-block {
       margin-left: 150px; /* Adjust as needed */
   }
 </style>
-<p class="text-block"><small>_<i>parent performance</i></small> </p>
 <br>
-<figure>
-  <audio controls src="parent_echo_scene2_TAM.mp3">
-    <a href="parent_echo_scene2_TAM.mp3"></a>
-  </audio>
-</figure>
-<small>performance excerpt</small> 
+<br>
 <br>
 <br>
 <br>
