--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <a href="index.html">Home</a> |
     <a href="works.html">Works</a> |
     <a href="radio.html">Radio</a> |
+    <a href="parent.html">Parent</a> |
     contact: isulvontrapp@gmail.com
 <br>
 </small> </nav>
