--- a/parent.html
+++ b/parent.html
@@ -56,7 +56,7 @@
 <small>20-10-24 TAM, Bulgaria </small> <br>
 <small>12-12-24 10 to 10, The Netherlands </small> <br>
 <br>
-<small>Viktoria Nikolova website here </small> <br>
+<small>Viktoria Nikolova website <a href="https://www.viktorianikolova.com/">here</a> </small> <br>
 <br>
 <br>
 <img src="Parent_performancestill.jpeg" alt="Parentperformance"style="width:450px;height:300px;"><br>
