--- a/parent.html
+++ b/parent.html
@@ -60,10 +60,10 @@
 <small>Viktoria Nikolova website <a href="https://www.viktorianikolova.com/">here</a> </small> <br>
 <br>
 <img src="Parent_performancestill.jpeg" alt="Parentperformance"style="width:450px;height:300px;"><br>
-<video width="450" height="300" controls>
+<!---<video width="450" height="300" controls>
   <source src="The Eternal Parent.mp4" type="video/mp4">
 Your browser does not support the video tag.
-</video><br>
+</video><br>--->
 <br>
     <br>
     <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2078919900%3Fsecret_token%3Ds-GG470meSLEE&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/isulkim" title="isul23k" target="_blank" style="color: #cccccc; text-decoration: none;">isul23k</a> · <a href="https://soundcloud.com/isulkim/parent-sofia-underground/s-GG470meSLEE" title="The Eternal Parent" target="_blank" style="color: #cccccc; text-decoration: none;">The Eternal Parent</a></div>
